k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dearbaby-backend-deployment
  labels:
    app: dearbaby-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dearbaby-backend
  template:
    metadata:
      labels:
        app: dearbaby-backend
    spec:
      containers:
      - name: dearbaby-backend-container
        image: 335667361860.dkr.ecr.ap-northeast-2.amazonaws.com/dearbabybackend:10bac94344778f6147ab29d9d8caf8b5bd1a0047
        ports:
        - containerPort: 8000
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: dearbaby-backend-service
spec:
  type: ClusterIP
  selector:
    app: dearbaby-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dearbaby-backend-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:335667361860:certificate/7b5509e0-5fc0-4801-ad8a-c4bf067e48e6
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
spec:
  ingressClassName: alb
  rules:
    - host: api.dearbaby.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dearbaby-backend-service
                port:
                  number: 80
